--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,7 +23,9 @@ jobs:
           ORKA_ENDPOINT_URL: ${{ secrets.ORKA_ENDPOINT }}
           ORKA_USER: ${{ secrets.ORKA_USER }}
           ORKA_PASSWORD: ${{ secrets.ORKA_PASSWORD }}
-        run: orka3 login --user $ORKA_USER --password $ORKA_PASSWORD
+        run: |
+          export ORKA_ENDPOINT_URL=$ORKA_ENDPOINT
+          orka3 login <<< "$ORKA_USER\n$ORKA_PASSWORD"
 
       - name: Run Ansible Playbook
         run: ansible-playbook manage_orka_vms.yml
