Add GitHub Actions workflow

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,11 +21,7 @@ jobs:
       - name: Log in to Orka
         env:
           ORKA_ENDPOINT_URL: ${{ secrets.ORKA_ENDPOINT }}
-          ORKA_USER: ${{ secrets.ORKA_USER }}
-          ORKA_PASSWORD: ${{ secrets.ORKA_PASSWORD }}
-        run: |
-          export ORKA_ENDPOINT_URL=$ORKA_ENDPOINT
-          orka3 login <<< "$ORKA_USER\n$ORKA_PASSWORD"
+        run: orka3 login
 
       - name: Run Ansible Playbook
         run: ansible-playbook manage_orka_vms.yml
